add some examples